--- a/Labs/module_1/Importing-Exporting-Data/your-code/main.ipynb
+++ b/Labs/module_1/Importing-Exporting-Data/your-code/main.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "import pandas as pd"
    ]
   },
   {
@@ -54,11 +54,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>:@computed_region_cbhk_fwbd</th>\n",
+       "      <th>:@computed_region_nnqa_25f4</th>\n",
+       "      <th>fall</th>\n",
+       "      <th>geolocation</th>\n",
+       "      <th>id</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>name</th>\n",
+       "      <th>nametype</th>\n",
+       "      <th>recclass</th>\n",
+       "      <th>reclat</th>\n",
+       "      <th>reclong</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [6.08333, 50....</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Aachen</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>L5</td>\n",
+       "      <td>50.77500</td>\n",
+       "      <td>6.08333</td>\n",
+       "      <td>1880-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [10.23333, 56...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>720.0</td>\n",
+       "      <td>Aarhus</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>H6</td>\n",
+       "      <td>56.18333</td>\n",
+       "      <td>10.23333</td>\n",
+       "      <td>1951-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-113, 54.216...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>107000.0</td>\n",
+       "      <td>Abee</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>EH4</td>\n",
+       "      <td>54.21667</td>\n",
+       "      <td>-113.00000</td>\n",
+       "      <td>1952-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-99.9, 16.88...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1914.0</td>\n",
+       "      <td>Acapulco</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>Acapulcoite</td>\n",
+       "      <td>16.88333</td>\n",
+       "      <td>-99.90000</td>\n",
+       "      <td>1976-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-64.95, -33....</td>\n",
+       "      <td>370</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>Achiras</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>L6</td>\n",
+       "      <td>-33.16667</td>\n",
+       "      <td>-64.95000</td>\n",
+       "      <td>1902-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   :@computed_region_cbhk_fwbd  :@computed_region_nnqa_25f4  fall  \\\n",
+       "0                          NaN                          NaN  Fell   \n",
+       "1                          NaN                          NaN  Fell   \n",
+       "2                          NaN                          NaN  Fell   \n",
+       "3                          NaN                          NaN  Fell   \n",
+       "4                          NaN                          NaN  Fell   \n",
+       "\n",
+       "                                         geolocation   id      mass      name  \\\n",
+       "0  {'type': 'Point', 'coordinates': [6.08333, 50....    1      21.0    Aachen   \n",
+       "1  {'type': 'Point', 'coordinates': [10.23333, 56...    2     720.0    Aarhus   \n",
+       "2  {'type': 'Point', 'coordinates': [-113, 54.216...    6  107000.0      Abee   \n",
+       "3  {'type': 'Point', 'coordinates': [-99.9, 16.88...   10    1914.0  Acapulco   \n",
+       "4  {'type': 'Point', 'coordinates': [-64.95, -33....  370     780.0   Achiras   \n",
+       "\n",
+       "  nametype     recclass    reclat    reclong                     year  \n",
+       "0    Valid           L5  50.77500    6.08333  1880-01-01T00:00:00.000  \n",
+       "1    Valid           H6  56.18333   10.23333  1951-01-01T00:00:00.000  \n",
+       "2    Valid          EH4  54.21667 -113.00000  1952-01-01T00:00:00.000  \n",
+       "3    Valid  Acapulcoite  16.88333  -99.90000  1976-01-01T00:00:00.000  \n",
+       "4    Valid           L6 -33.16667  -64.95000  1902-01-01T00:00:00.000  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "import os\n",
+    "os.chdir(r'/Users/tatiana/ironhack/248_Repo/Labs/module_1/Importing-Exporting-Data/data')\n",
+    "nasa=pd.read_json('nasa.json', orient='records')"
    ]
   },
   {
@@ -70,11 +215,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>:@computed_region_cbhk_fwbd</th>\n",
+       "      <th>:@computed_region_nnqa_25f4</th>\n",
+       "      <th>fall</th>\n",
+       "      <th>geolocation</th>\n",
+       "      <th>id</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>name</th>\n",
+       "      <th>nametype</th>\n",
+       "      <th>recclass</th>\n",
+       "      <th>reclat</th>\n",
+       "      <th>reclong</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [6.08333, 50....</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Aachen</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>L5</td>\n",
+       "      <td>50.77500</td>\n",
+       "      <td>6.08333</td>\n",
+       "      <td>1880-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [10.23333, 56...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>720.0</td>\n",
+       "      <td>Aarhus</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>H6</td>\n",
+       "      <td>56.18333</td>\n",
+       "      <td>10.23333</td>\n",
+       "      <td>1951-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-113, 54.216...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>107000.0</td>\n",
+       "      <td>Abee</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>EH4</td>\n",
+       "      <td>54.21667</td>\n",
+       "      <td>-113.00000</td>\n",
+       "      <td>1952-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-99.9, 16.88...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1914.0</td>\n",
+       "      <td>Acapulco</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>Acapulcoite</td>\n",
+       "      <td>16.88333</td>\n",
+       "      <td>-99.90000</td>\n",
+       "      <td>1976-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-64.95, -33....</td>\n",
+       "      <td>370</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>Achiras</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>L6</td>\n",
+       "      <td>-33.16667</td>\n",
+       "      <td>-64.95000</td>\n",
+       "      <td>1902-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   :@computed_region_cbhk_fwbd  :@computed_region_nnqa_25f4  fall  \\\n",
+       "0                          NaN                          NaN  Fell   \n",
+       "1                          NaN                          NaN  Fell   \n",
+       "2                          NaN                          NaN  Fell   \n",
+       "3                          NaN                          NaN  Fell   \n",
+       "4                          NaN                          NaN  Fell   \n",
+       "\n",
+       "                                         geolocation   id      mass      name  \\\n",
+       "0  {'type': 'Point', 'coordinates': [6.08333, 50....    1      21.0    Aachen   \n",
+       "1  {'type': 'Point', 'coordinates': [10.23333, 56...    2     720.0    Aarhus   \n",
+       "2  {'type': 'Point', 'coordinates': [-113, 54.216...    6  107000.0      Abee   \n",
+       "3  {'type': 'Point', 'coordinates': [-99.9, 16.88...   10    1914.0  Acapulco   \n",
+       "4  {'type': 'Point', 'coordinates': [-64.95, -33....  370     780.0   Achiras   \n",
+       "\n",
+       "  nametype     recclass    reclat    reclong                     year  \n",
+       "0    Valid           L5  50.77500    6.08333  1880-01-01T00:00:00.000  \n",
+       "1    Valid           H6  56.18333   10.23333  1951-01-01T00:00:00.000  \n",
+       "2    Valid          EH4  54.21667 -113.00000  1952-01-01T00:00:00.000  \n",
+       "3    Valid  Acapulcoite  16.88333  -99.90000  1976-01-01T00:00:00.000  \n",
+       "4    Valid           L6 -33.16667  -64.95000  1902-01-01T00:00:00.000  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nasa.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "\n"
    ]
   },
   {
@@ -88,11 +385,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fell     996\n",
+      "Found      4\n",
+      "Name: fall, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "values = nasa['fall'].value_counts(dropna=False)\n",
+    "print(values)"
    ]
   },
   {
@@ -104,11 +412,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "#Export\n",
+    "values.to_json(r'/Users/tatiana/ironhack/248_Repo/Labs/module_1/Importing-Exporting-Data/data/nasa-output.json', orient='records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['astronauts.xls', 'nasa-output.json', 'nasa.json']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(os.listdir())"
    ]
   },
   {
@@ -124,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,11 +463,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "shuttle = pd.read_csv(tst_url)\n",
+    "\n",
+    "shuttlef = pd.DataFrame(shuttle,columns=cols)\n"
    ]
   },
   {
@@ -154,7 +485,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "nasa.head()"
    ]
   },
   {
@@ -278,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
