--- a/Labs/module_2/Intro-Scipy/your-code/main.ipynb
+++ b/Labs/module_2/Intro-Scipy/your-code/main.ipynb
@@ -12,11 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#import numpy and pandas\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n"
    ]
   },
@@ -31,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "data = pd.read_csv('/Users/tatiana/ironhack/248_Repo/Labs/module_2/Intro-Scipy/data/ks-projects-201801.csv')"
    ]
   },
   {
@@ -47,12 +49,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>name</th>\n",
+       "      <th>category</th>\n",
+       "      <th>main_category</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>deadline</th>\n",
+       "      <th>goal</th>\n",
+       "      <th>launched</th>\n",
+       "      <th>pledged</th>\n",
+       "      <th>state</th>\n",
+       "      <th>backers</th>\n",
+       "      <th>country</th>\n",
+       "      <th>usd pledged</th>\n",
+       "      <th>usd_pledged_real</th>\n",
+       "      <th>usd_goal_real</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1000002330</td>\n",
+       "      <td>The Songs of Adelaide &amp; Abullah</td>\n",
+       "      <td>Poetry</td>\n",
+       "      <td>Publishing</td>\n",
+       "      <td>GBP</td>\n",
+       "      <td>2015-10-09</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>2015-08-11 12:12:28</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1533.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1000003930</td>\n",
+       "      <td>Greeting From Earth: ZGAC Arts Capsule For ET</td>\n",
+       "      <td>Narrative Film</td>\n",
+       "      <td>Film &amp; Video</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>2017-11-01</td>\n",
+       "      <td>30000.0</td>\n",
+       "      <td>2017-09-02 04:43:57</td>\n",
+       "      <td>2421.0</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>15</td>\n",
+       "      <td>US</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2421.0</td>\n",
+       "      <td>30000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1000004038</td>\n",
+       "      <td>Where is Hank?</td>\n",
+       "      <td>Narrative Film</td>\n",
+       "      <td>Film &amp; Video</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>2013-02-26</td>\n",
+       "      <td>45000.0</td>\n",
+       "      <td>2013-01-12 00:20:50</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>3</td>\n",
+       "      <td>US</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>45000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1000007540</td>\n",
+       "      <td>ToshiCapital Rekordz Needs Help to Complete Album</td>\n",
+       "      <td>Music</td>\n",
+       "      <td>Music</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>2012-04-16</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>2012-03-17 03:24:11</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>1</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1000011046</td>\n",
+       "      <td>Community Film Project: The Art of Neighborhoo...</td>\n",
+       "      <td>Film &amp; Video</td>\n",
+       "      <td>Film &amp; Video</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>2015-08-29</td>\n",
+       "      <td>19500.0</td>\n",
+       "      <td>2015-07-04 08:35:03</td>\n",
+       "      <td>1283.0</td>\n",
+       "      <td>canceled</td>\n",
+       "      <td>14</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1283.0</td>\n",
+       "      <td>1283.0</td>\n",
+       "      <td>19500.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           ID                                               name  \\\n",
+       "0  1000002330                    The Songs of Adelaide & Abullah   \n",
+       "1  1000003930      Greeting From Earth: ZGAC Arts Capsule For ET   \n",
+       "2  1000004038                                     Where is Hank?   \n",
+       "3  1000007540  ToshiCapital Rekordz Needs Help to Complete Album   \n",
+       "4  1000011046  Community Film Project: The Art of Neighborhoo...   \n",
+       "\n",
+       "         category main_category currency    deadline     goal  \\\n",
+       "0          Poetry    Publishing      GBP  2015-10-09   1000.0   \n",
+       "1  Narrative Film  Film & Video      USD  2017-11-01  30000.0   \n",
+       "2  Narrative Film  Film & Video      USD  2013-02-26  45000.0   \n",
+       "3           Music         Music      USD  2012-04-16   5000.0   \n",
+       "4    Film & Video  Film & Video      USD  2015-08-29  19500.0   \n",
+       "\n",
+       "              launched  pledged     state  backers country  usd pledged  \\\n",
+       "0  2015-08-11 12:12:28      0.0    failed        0      GB          0.0   \n",
+       "1  2017-09-02 04:43:57   2421.0    failed       15      US        100.0   \n",
+       "2  2013-01-12 00:20:50    220.0    failed        3      US        220.0   \n",
+       "3  2012-03-17 03:24:11      1.0    failed        1      US          1.0   \n",
+       "4  2015-07-04 08:35:03   1283.0  canceled       14      US       1283.0   \n",
+       "\n",
+       "   usd_pledged_real  usd_goal_real  \n",
+       "0               0.0        1533.95  \n",
+       "1            2421.0       30000.00  \n",
+       "2             220.0       45000.00  \n",
+       "3               1.0        5000.00  \n",
+       "4            1283.0       19500.00  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "data.head()"
    ]
   },
   {
@@ -64,13 +233,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'(slice(None, None, None), [0, 2])' is an invalid key",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-b8b916eb64b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#dataframe data to numpy array datan\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;31m#mode for category and currency\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2900\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2901\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2902\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2903\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2904\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   2887\u001b[0m             \u001b[0mcasted_key\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_maybe_cast_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2888\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2889\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2890\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2891\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: '(slice(None, None, None), [0, 2])' is an invalid key"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n",
+    "import scipy.stats as scs\n",
+    "#dataframe data to numpy array datan\n",
+    "data.to_numpy(copy=True)\n",
+    "data[:, [0, 2]]\n",
+    "#mode for category and currency\n",
+    "\n",
+    "#country=data[:,3]\n",
+    "#cat\n",
+    "\n",
+    "\n",
+    "#m_category = scs.mode()\n",
+    "#m_currency = scs.mode()\n",
+    "\n",
+    "#print(f'mode of cat{m_category}\\nand mode of currency{m_currency}')\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -337,7 +542,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.7"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
